// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-cyxtte jfFmTu"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Default color is Bulma
  </p>
  <p
    className="sc-cyxtte hgSxpH"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-cyxtte ckMzfF"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-cyxtte fOKbDT"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-cyxtte bGagBw"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-cyxtte erSfSn"
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-cyxtte jfFmTu"
  >
    Span tag
  </span>
  <label
    className="sc-cyxtte jfFmTu"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-cyxtte ckEwNV"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-cyxtte cbdYMl"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-cyxtte fGFOqp"
  >
    Centered Text
  </p>
  <p
    className="sc-cyxtte cKWJxO"
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-cyxtte creTHP"
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-cyxtte jfFmTu"
  >
    Default text-transform is none
  </p>
  <p
    className="sc-cyxtte dBUrIB"
  >
    Uppercase Text
  </p>
</div>
`;
